--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -7,6 +7,7 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import os\n",
     "import args\n",
@@ -20,29 +21,30 @@
     "from timm.utils import AverageMeter\n",
     "from utils import *\n",
     "from torch.utils.tensorboard import SummaryWriter"
-   ],
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "320bf53b7c4b1927",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger('Log')"
-   ],
-   "id": "320bf53b7c4b1927",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "687e25de3d81d178",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def test(test_loader, model, criterion, device, eval_mode=True):\n",
     "    model.eval()\n",
     "    losses = AverageMeter()\n",
-    "    metrics_tracker = MetricTracker(args.num_classes)\n",
+    "    metrics_tracker = MetricTracker(args.num_classes).to(device)\n",
     "    correct = 0\n",
     "    total = 0\n",
     "\n",
@@ -50,7 +52,7 @@
     "        for images, labels in test_loader:\n",
     "            images, labels = images.to(device), labels.to(device)\n",
     "\n",
-    "            with torch.cuda.amp.autocast():\n",
+    "            with torch.amp.autocast():\n",
     "                outputs = model(images)\n",
     "                loss = criterion(outputs, labels)\n",
     "\n",
@@ -66,14 +68,14 @@
     "    if eval_mode:\n",
     "        return losses.avg, test_accuracy\n",
     "    return test_accuracy, metrics"
-   ],
-   "id": "687e25de3d81d178",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebb0e9164b1ea373",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_data = ProjectDataset(mode='train', root_dir='dataset', seed=args.seed)\n",
     "train_loader = DataLoader(train_data, batch_size=args.batch_size, shuffle=True)\n",
@@ -86,14 +88,14 @@
     "test_data = ProjectDataset(mode='test', root_dir='dataset', seed=args.seed)\n",
     "test_loader = DataLoader(test_data, batch_size=args.batch_size, shuffle=False)\n",
     "test_len = len(test_loader.dataset)"
-   ],
-   "id": "ebb0e9164b1ea373",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9b4fb4626127ca3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
@@ -108,14 +110,14 @@
     "\n",
     "if not os.path.exists(\"./checkpoint/\"):\n",
     "    os.mkdir(\"./checkpoint/\")"
-   ],
-   "id": "a9b4fb4626127ca3",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "26974f154c52fedb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "base_params = [  # Parameters in the model except FC layer\n",
     "        param for name, param in model.named_parameters() if \"fc\" not in str(name)\n",
@@ -144,14 +146,14 @@
     "writer = SummaryWriter(log_dir)\n",
     "handler = logging.FileHandler(f'{log_dir}/log.txt')\n",
     "logger.addHandler(handler)"
-   ],
-   "id": "26974f154c52fedb",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "45ae12116907c808",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not args.eval_mode:\n",
     "    if args.model_path:\n",
@@ -165,10 +167,9 @@
     "    logger.info(\"=> Testing Results\")\n",
     "    logger.info(\"Top-1 Accuracy: {:.2f}%\".format(test_metrics['top1_acc']))\n",
     "    logger.info(\"Top-5 Accuracy: {:.2f}%\".format(test_metrics['top5_acc']))\n",
-    "    logger.info(\"F1-Score: {:.2f}%\".format(test_metrics['f1']))"
-   ],
-   "id": "45ae12116907c808",
-   "outputs": []
+    "    logger.info(\"F1-Score: {:.2f}%\".format(test_metrics['f1']))\n",
+    "handler.close()"
+   ]
   }
  ],
  "metadata": {
