--- a/notebooks/train_and_eval.ipynb
+++ b/notebooks/train_and_eval.ipynb
@@ -7,19 +7,24 @@
    "metadata": {
     "collapsed": true
    },
-   "source": "!pip install -r requirements.txt",
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5421e9caa0fbeda1",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
      "start_time": "2024-09-23T22:09:07.160833Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import os\n",
     "import args\n",
@@ -33,26 +38,25 @@
     "from timm.utils import AverageMeter\n",
     "from utils import *\n",
     "from torch.utils.tensorboard import SummaryWriter"
-   ],
-   "id": "5421e9caa0fbeda1",
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4cda0a0e0ed339c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger('Log')"
-   ],
-   "id": "a4cda0a0e0ed339c",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "b28433adaff6d9b0",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def train(train_loader, model, criterion, optimiser, scaler, scheduler, device, epoch):\n",
     "    model.train()\n",
@@ -71,7 +75,7 @@
     "        optimiser.zero_grad()\n",
     "\n",
     "        #   Forward pass\n",
-    "        with torch.cuda.amp.autocast():\n",
+    "        with torch.amp.autocast():\n",
     "            outputs = model(images)\n",
     "            loss = criterion(outputs, labels)\n",
     "\n",
@@ -97,19 +101,19 @@
     "    metrics = metrics_tracker.compute()\n",
     "    metrics_tracker.reset()\n",
     "    return losses.avg, train_accuracy, metrics"
-   ],
-   "id": "b28433adaff6d9b0",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "7823b0dacfe37f24",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def test(test_loader, model, criterion, device, eval_mode=True):\n",
     "    model.eval()\n",
     "    losses = AverageMeter()\n",
-    "    metrics_tracker = MetricTracker(args.num_classes)\n",
+    "    metrics_tracker = MetricTracker(args.num_classes).to(device)\n",
     "    correct = 0\n",
     "    total = 0\n",
     "\n",
@@ -117,7 +121,7 @@
     "        for images, labels in test_loader:\n",
     "            images, labels = images.to(device), labels.to(device)\n",
     "\n",
-    "            with torch.cuda.amp.autocast():\n",
+    "            with torch.amp.autocast():\n",
     "                outputs = model(images)\n",
     "                loss = criterion(outputs, labels)\n",
     "\n",
@@ -133,14 +137,14 @@
     "    if eval_mode:\n",
     "        return losses.avg, test_accuracy\n",
     "    return test_accuracy, metrics"
-   ],
-   "id": "7823b0dacfe37f24",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "6582dbd883f65927",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_data = ProjectDataset(mode='train', root_dir='dataset', seed=args.seed)\n",
     "train_loader = DataLoader(train_data, batch_size=args.batch_size, shuffle=True)\n",
@@ -153,14 +157,14 @@
     "test_data = ProjectDataset(mode='test', root_dir='dataset', seed=args.seed)\n",
     "test_loader = DataLoader(test_data, batch_size=args.batch_size, shuffle=False)\n",
     "test_len = len(test_loader.dataset)"
-   ],
-   "id": "6582dbd883f65927",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "61097de4930faff4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
@@ -175,14 +179,14 @@
     "\n",
     "if not os.path.exists(\"./checkpoint/\"):\n",
     "    os.mkdir(\"./checkpoint/\")"
-   ],
-   "id": "61097de4930faff4",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "24046d6b68a0d6eb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "base_params = [  # Parameters in the model except FC layer\n",
     "        param for name, param in model.named_parameters() if \"fc\" not in str(name)\n",
@@ -211,14 +215,14 @@
     "writer = SummaryWriter(log_dir)\n",
     "handler = logging.FileHandler(f'{log_dir}/log.txt')\n",
     "logger.addHandler(handler)"
-   ],
-   "id": "24046d6b68a0d6eb",
-   "outputs": []
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c39416787cc1ee2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print_summary(logger, model_name, train_len, val_len, test_len)\n",
     "logger.info(\"=> Start Training\")\n",
@@ -237,10 +241,10 @@
     "\n",
     "    filename = f\"Model-{model_name}-lr_{args.lr}_bs_{args.batch_size}-E{epoch + 1}.pth\"\n",
     "    save_path = os.path.join(args.save_path, filename)\n",
-    "    torch.save(model.state_dict(), save_path)"
-   ],
-   "id": "5c39416787cc1ee2",
-   "outputs": []
+    "    torch.save(model.state_dict(), save_path)\n",
+    "logger.info(\"=> Training Finished\")\n",
+    "handler.close()"
+   ]
   }
  ],
  "metadata": {
